# ChangeLog for dev-ruby/stringex
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/ChangeLog,v 1.6 2012/08/16 03:57:21 flameeyes Exp $

  16 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> stringex-1.3.2.ebuild,
  stringex-1.3.3.ebuild, stringex-1.4.0.ebuild:
  Update after Ruby packages move.

*stringex-1.4.0 (09 Jun 2012)

  09 Jun 2012; Hans de Graaff <graaff@gentoo.org> +stringex-1.4.0.ebuild:
  Version bump.

*stringex-1.3.3 (28 Apr 2012)

  28 Apr 2012; Diego E. Pettenò <flameeyes@gentoo.org> +stringex-1.3.3.ebuild:
  Version bump.

*stringex-1.3.2 (17 Feb 2012)

  17 Feb 2012; Diego E. Pettenò <flameeyes@gentoo.org> +stringex-1.3.2.ebuild,
  -stringex-1.3.0.ebuild:
  Version bump; remove old; fix test deps.

  09 Feb 2012; Hans de Graaff <graaff@gentoo.org> stringex-1.3.0.ebuild:
  Add missing IUSE.

*stringex-1.3.0 (25 Jan 2012)

  25 Jan 2012; Diego E. Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +stringex-1.3.0.ebuild:
  Initial import of stringex (needed for radiant rc4 and later).