@@ -1,8 +1,14 @@
-DIST stringex-1.3.2.gem 104448 SHA256 132621b1d84b219c42212a575ab0f8747d8209b93449b2ac6d0413c8c4749521 SHA512 81b43dc50d396b23f1f1a47061cc808d525364fb655e92cf1569ab62b8dbf19c93b7bb48cd17247f7f6ff19892b7b59d7aa5fc07ca179510e7f6dcad7ed50c0e WHIRLPOOL 7bf213859286919b340424b74f210944c96a0bbf8ef8d90aab85bc49de3fb24d276706d324b6008b93d0b50c92de349d3b773bfa175102b3b25d4450b0740fde
-DIST stringex-1.3.3.gem 105984 SHA256 5171a962a8b8279a841dd69e95926fc9d38c0afecedc6e78358f70e04ed7a65a SHA512 83b52efd899b43f7da5b604a9252944526cb42e44c79a1ee7cffaf40c821b8570071c32817d7bc84bca76b43c9ff395e9567176a746c8f35c37143516343c141 WHIRLPOOL e501f4dc7307da500cbe2c55bf8d5e579e6c4c0960038647b9dac260364271ea7d0050b9649c111dd74943846da7576a305a8d58ce72bae9f1ee617f43d7b4db
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST stringex-1.4.0.gem 105984 SHA256 d1c4267991a95d08ede6f45f866a31bbb58ed34b915f9091c67abc1a8bf801c4 SHA512 d0650dba00205bad4bd55463706d7ff765cca7a0d8cbd541f3429fbb092acea1bb72e924f3525b8f6fa93298a201f09ecc2cc2b047e6d91da4cdf09b7eca996d WHIRLPOOL 8f4a84a9be8495f78fe37348e412ee338ddc1889a07cf3cb43680b8735d8d7b0ebc84fa364be5db96316098cca5037c051762a5efda79874c70be529298c5c59
-EBUILD stringex-1.3.2.ebuild 942 SHA256 c19c72a2ee8cc3caf791dd6b47c1b5f924892c9b0ba774f7350a1ea5613f5c15 SHA512 8e9e0f626eecf367ab411fab845af72d28e266e87d8de102c797a1d277ed98fa8d555016362d1ba47f16be69c96078fa286b695631fc9b1cf869c6ed10ef20ca WHIRLPOOL 02a50e259e7615515d5597699fd209dc87d433ee9aaa1ff0344dd325f9d67aa2de37950ed36d73b62b639365f7c0aaf987f90e567812bdec10912cc919b227c7
-EBUILD stringex-1.3.3.ebuild 942 SHA256 d75d17b055cdc2487712d404c1fe7b2c953aab80e7157d300d5fb39c5c42413a SHA512 b700f431d8a708e37031a79deca679756888a34bbfb334e6d73fc776b5ab1d6e179219ccd736c382424fb54b027f48a7ba0c90c226b86f046cd70ba1bb5e2a70 WHIRLPOOL afb0e35472d47c986125f6a7c1e0148dfb7b0fcb12e3d88902a4de088b8e998313d6eebcb0e5ab6b3504cd25dab2e1d8b6af1b03d77a3f5100f259145b40fba5
 EBUILD stringex-1.4.0.ebuild 942 SHA256 ec895d80d97d6c51223b8ca6783938b1af018aabbe3a32c5cd2433e7cb615246 SHA512 2669da2fbf094d752b4a4c3556539a80ce5ebba6346adf6f2484f1cdaed1c4c0908235515ba67e78c6039d610701f96e24690b3453a660211c8ac144328b935d WHIRLPOOL f65b8f7e0822e0ba094e2d849a4dff0884e6b9a09f72c80aaa7a71425a98b6124444ffa62a4b5d83523ff68b9511c188ee0015376a78f72fccf5376553520869
-MISC ChangeLog 1091 SHA256 894a992b1747255f3aafd65558a068a7d0afba4e5f7301eec713af0fb223cc84 SHA512 222ac37ece088e75a8c4cc365ac623f59372027334a8df329dd3bbbbccdfbea3875c821f5b47398c5099a80bab914a7b306faa562ffe5c0ccdf1b25e9600bdf9 WHIRLPOOL f649eff22be5abb0d0f2ef19455afb81cb8f9d5c0895127afa0738162b501465e10952de7faabf8061e4f2273b54f2bea4d9c1e184b976b42eaa063b4c85c3b5
+MISC ChangeLog 1200 SHA256 696f1088787b4eb92376f1a326599bcfb2f816ccf127fcb75ddbe7b6eb0afc76 SHA512 a1fb496207d7ceef59dc1962f4f94deca8136a0454a5fa910f5ebef1ea98fd378b26cff5191ce88c2f232f855ff70065ce71218fa9299b8cc08ddc50ac6cff50 WHIRLPOOL 1ef010beba54f8e119621a0fb763dca1025e30bf717e3652d7400af9a3a4d60f47cf497b9b5917d0caceccaa2b65d63b535fe45ddc4cfd116a49faadd4bf1cbf
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlBezKcACgkQiIP6VqMIqNd/FAD/XOu+Z8mgyFsED51ZAPnnWABj
+TECkRtPJ+jSsvwb24VEA/2BSzJQr5x6Tw3tC/g34wjwOnaJwIdg5Lyx9iRD4tTzn
+=NaEI
+-----END PGP SIGNATURE-----
