@@ -1,35 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/stringex-1.3.2.ebuild,v 1.2 2012/08/16 03:57:21 flameeyes Exp $
-
-EAPI=4
-USE_RUBY="ruby18 ruby19 ree18"
-
-RUBY_FAKEGEM_DOC_DIR="rdoc"
-RUBY_FAKEGEM_EXTRADOC="README.rdoc"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Extensions for Ruby's String class"
-HOMEPAGE="http://github.com/rsl/stringex"
-LICENSE="MIT"
-
-SLOT="0"
-KEYWORDS="~amd64"
-IUSE="test"
-
-# we could rely on activerecord[sqlite3], but since we do not remove the
-# sqlite3 adapter from activerecord when building -sqlite3, it's easier
-# to just add another dependency, so the user doesn't have to change the
-# USE flags at all.
-ruby_add_bdepend "
-	test? (
-		dev-ruby/activerecord
-		dev-ruby/sqlite3
-		dev-ruby/redcloth
-	)"
-
-each_ruby_test() {
-	# rake seems to break this
-	${RUBY} -Ilib -S testrb test/*_test.rb || die "tests failed"
-}
