@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/stringex
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/ChangeLog,v 1.6 2012/08/16 03:57:21 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/ChangeLog,v 1.7 2012/09/23 08:47:30 graaff Exp $
+
+  23 Sep 2012; Hans de Graaff <graaff@gentoo.org> -stringex-1.3.2.ebuild,
+  -stringex-1.3.3.ebuild:
+  Cleanup.
 
   16 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> stringex-1.3.2.ebuild,
   stringex-1.3.3.ebuild, stringex-1.4.0.ebuild:
